[Segfault<>BKE_object_is_visible_in_viewport] when rendering the default cube in cycles, despite viewport rendering works fine. #70838

Closed
opened 2019-10-15 13:42:40 +02:00 by bartus sz · 9 comments

System Information
Operating system: Linux-5.3.5-arch1-1-ARCH-x86_64-with-arch 64 Bits
Graphics card: llvmpipe (LLVM 9.0, 256 bits) VMware, Inc. 3.3 (Core Profile) Mesa 19.2.1

Blender Version
Broken: version: 2.82 (sub 0), branch: master, commit date: 2019-10-15 08:27, hash: 3cdcd1fa9f08
Worked: (optional)

Short description of error
Crashes when hitting f12 to render the startup default scene in cycle, never the less render preview in the view port works fine.

Exact steps for others to reproduce the error
run blender
switch to cycles
f12
crash

core.912897.xz
gdb.txt

**System Information** Operating system: Linux-5.3.5-arch1-1-ARCH-x86_64-with-arch 64 Bits Graphics card: llvmpipe (LLVM 9.0, 256 bits) VMware, Inc. 3.3 (Core Profile) Mesa 19.2.1 **Blender Version** Broken: version: 2.82 (sub 0), branch: master, commit date: 2019-10-15 08:27, hash: `3cdcd1fa9f08 ` Worked: (optional) **Short description of error** Crashes when hitting f12 to render the startup default scene in cycle, never the less render preview in the view port works fine. **Exact steps for others to reproduce the error** run blender switch to cycles f12 crash [core.912897.xz](https://archive.blender.org/developer/F7820312/core.912897.xz) [gdb.txt](https://archive.blender.org/developer/F7820316/gdb.txt)
Author

Added subscriber: @bartus-4

Added subscriber: @bartus-4
Member

Added subscribers: @dfelinto, @lichtwerk

Added subscribers: @dfelinto, @lichtwerk
Member

Can confirm, assume 280d6b03a7 is the culprit? (but will check on this...)

CC @dfelinto, brecht

1   BKE_object_is_visible_in_viewport   layer.c             1068  0x2e08627      
2   rna_Object_visible_in_viewport_get  rna_object_api.c    289   0x32aab6a      
3   Object_visible_in_viewport_get_func rna_object_gen.c    3153  0x32b20c1      
4   BL::Object::visible_in_viewport_get RNA_blender_cpp.h   50386 0x33f846b      
5   ccl::BlenderSync::sync_objects      blender_object.cpp  558   0x33f75ae      
6   ccl::BlenderSync::sync_data         blender_sync.cpp    218   0x33d917e      
7   ccl::BlenderSession::render         blender_session.cpp 526   0x33c7eba      
8   ccl::render_func                    blender_python.cpp  283   0x33bb198      
9   _PyMethodDef_RawFastCallKeywords                              0x7ffff799ef2e 
10  _PyCFunction_FastCallKeywords                                 0x7ffff799f063 
11  ??                                                            0x7ffff79d17b3 
12  _PyEval_EvalFrameDefault                                      0x7ffff7a0da02 
13  _PyFunction_FastCallKeywords                                  0x7ffff79bfee2 
14  ??                                                            0x7ffff79d169f 
15  _PyEval_EvalFrameDefault                                      0x7ffff7a0da02 
16  _PyFunction_FastCallDict                                      0x7ffff79c054a 
17  bpy_class_call                      bpy_rna.c           8328  0x315bb3b      
18  engine_render                       rna_render.c        170   0x32ceed0      
19  RE_engine_render                    external_engine.c   778   0x3175f21      
20  do_render_3d                        pipeline.c          1165  0x317960d 
Can confirm, assume 280d6b03a7 is the culprit? (but will check on this...) CC @dfelinto, brecht ``` 1 BKE_object_is_visible_in_viewport layer.c 1068 0x2e08627 2 rna_Object_visible_in_viewport_get rna_object_api.c 289 0x32aab6a 3 Object_visible_in_viewport_get_func rna_object_gen.c 3153 0x32b20c1 4 BL::Object::visible_in_viewport_get RNA_blender_cpp.h 50386 0x33f846b 5 ccl::BlenderSync::sync_objects blender_object.cpp 558 0x33f75ae 6 ccl::BlenderSync::sync_data blender_sync.cpp 218 0x33d917e 7 ccl::BlenderSession::render blender_session.cpp 526 0x33c7eba 8 ccl::render_func blender_python.cpp 283 0x33bb198 9 _PyMethodDef_RawFastCallKeywords 0x7ffff799ef2e 10 _PyCFunction_FastCallKeywords 0x7ffff799f063 11 ?? 0x7ffff79d17b3 12 _PyEval_EvalFrameDefault 0x7ffff7a0da02 13 _PyFunction_FastCallKeywords 0x7ffff79bfee2 14 ?? 0x7ffff79d169f 15 _PyEval_EvalFrameDefault 0x7ffff7a0da02 16 _PyFunction_FastCallDict 0x7ffff79c054a 17 bpy_class_call bpy_rna.c 8328 0x315bb3b 18 engine_render rna_render.c 170 0x32ceed0 19 RE_engine_render external_engine.c 778 0x3175f21 20 do_render_3d pipeline.c 1165 0x317960d ```
Philipp Oeser changed title from [Segfoult<>BKE_object_is_visible_in_viewport] when rendering the default cube in cycles, despite viewport rendering works fine. to [Segfault<>BKE_object_is_visible_in_viewport] when rendering the default cube in cycles, despite viewport rendering works fine. 2019-10-15 14:24:51 +02:00
Member

Added subscriber: @pmoursnv

Added subscriber: @pmoursnv
Member

Can confirm too. Happens because the old code in visible_in_viewport_get_func checked whether b_v3d is NULL before accessing it, but the new code doesn't (and the viewport can be NULL).

Quick workaround (not sure if correct): const bool show_in_viewport = !b_v3d || b_ob.visible_in_viewport_get(b_v3d); in BlenderSync::sync_objects.

Can confirm too. Happens because the old code in `visible_in_viewport_get_func` checked whether `b_v3d` is NULL before accessing it, but the new code doesn't (and the viewport can be NULL). Quick workaround (not sure if correct): `const bool show_in_viewport = !b_v3d || b_ob.visible_in_viewport_get(b_v3d);` in BlenderSync::sync_objects.

This issue was referenced by blender/cycles@6d18057e62

This issue was referenced by blender/cycles@6d18057e62b428120f976a2275778163aa8cc40e

This issue was referenced by 7df7a8f3f1

This issue was referenced by 7df7a8f3f1bbd894febc102e339aa03e59d363b9
Dalai Felinto self-assigned this 2019-10-15 15:14:18 +02:00

Fixing it at the moment.

Fixing it at the moment.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70838
No description provided.