Fix T70838: crash on cycles render after recent fix

My bad for not figuring out how to run our unittests since I got back to
Windows.