intern/cycles/blender/blender_object.cpp
@@ -555,7 +555,7 @@ void BlenderSync::sync_objects(BL::Depsgraph &b_depsgraph,
     /* test if object needs to be hidden */
     const bool show_self = b_instance.show_self();
     const bool show_particles = b_instance.show_particles();
-    const bool show_in_viewport = b_ob.visible_in_viewport_get(b_v3d);
+    const bool show_in_viewport = !b_v3d || b_ob.visible_in_viewport_get(b_v3d);
 
     if (show_in_viewport && (show_self || show_particles)) {
       /* object itself */
